--- a/backend/bgreenNet/src/main/resources/application.properties
+++ b/backend/bgreenNet/src/main/resources/application.properties
@@ -1,1 +1,27 @@
 spring.application.name=bgreenNet
+
+# ===============================
+# = DATA SOURCE
+# ===============================
+spring.datasource.url=jdbc:sqlserver://172.30.72.47:1433;databaseName=BgreenNet_Dev;encrypt=false;trustServerCertificate=false;
+spring.datasource.username=logistica
+spring.datasource.password=Bio123456.
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+# ===============================
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# ===============================
+# = SERVER
+# ===============================
+server.port=8081
+
+# ===============================
