--- a/backend/bgreenNet/src/main/resources/application.properties
+++ b/backend/bgreenNet/src/main/resources/application.properties
@@ -3,9 +3,14 @@ spring.application.name=bgreenNet
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=jdbc:sqlserver://172.30.72.47:1433;databaseName=BgreenNet_Dev;encrypt=false;trustServerCertificate=false;
+
+
+spring.datasource.url=jdbc:sqlserver://172.30.72.47;databaseName=BgreenNet_Dev;encrypt=true;trustServerCertificate=true;sslProtocol=TLSv1.2
+
+
 spring.datasource.username=logistica
 spring.datasource.password=Bio123456.
+
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # ===============================
@@ -22,6 +27,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # ===============================
 # = SERVER
 # ===============================
+
 server.port=8081
 
 # ===============================
