--- a/backend/bgreenNet/src/main/resources/application.properties
+++ b/backend/bgreenNet/src/main/resources/application.properties
@@ -5,8 +5,13 @@ spring.application.name=bgreenNet
 # ===============================
 
 spring.datasource.url=jdbc:sqlserver://172.30.72.47;databaseName=BgreenNet_Dev;encrypt=true;trustServerCertificate=true;sslProtocol=TLSv1.2
+
+#spring.datasource.url=jdbc:sqlserver://IaasBiocosta\\SQLEXPRESS;databaseName=BgreenNet_PREPROD;encrypt=true;trustServerCertificate=true;sslProtocol=TLSv1.2
+
 spring.datasource.username=logistica
+#spring.datasource.username=bgreen
 spring.datasource.password=Bio123456.
+
 
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -24,6 +29,12 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # ===============================
 # = SERVER
 # ===============================
+
+#Puerto 172.30.72.200
 server.port=8081
+
+#http://10.160.3.208
+#server.port=8086
+
 # ===============================
 
